[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "unmp"
version = "0.0.1760909622"
description = "iterates over or removes messagepacking from stdin"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = [
    "typing-extensions",
    "eprint @ git+https://git@github.com/jakeogh/eprint",
    "epprint @ git+https://git@github.com/jakeogh/epprint",
    "clicktool @ git+https://git@github.com/jakeogh/clicktool",
    "globalverbose @ git+https://git@github.com/jakeogh/globalverbose",
]
license = "ISC"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/jakeogh/unmp"

[project.scripts]
unmp = "unmp.cli:cli"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
unmp = [
    "py.typed",
]
