[build-system]
requires = ["setuptools>=61.0", "tomlkit"]
build-backend = "pep508_url_version_backend"
backend-path = ["."]

[project]
name = "unmp"
version = "0.0.1760909622"
description = "iterates over or removes messagepacking from stdin"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = []
license = "ISC"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/jakeogh/unmp"

[project.scripts]
unmp = "unmp.cli:cli"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
unmp = [
    "py.typed",
]

[tool.pep508-url-version-backend]
dependencies-indexed = []
dependencies-git = ["typing-extensions", "eprint @ git+https://git@github.com/jakeogh/eprint", "epprint @ git+https://git@github.com/jakeogh/epprint", "clicktool @ git+https://git@github.com/jakeogh/clicktool", "globalverbose @ git+https://git@github.com/jakeogh/globalverbose"]
index-urls = ["jakeogh.github.io", "pip-index"]
